# wild-doc-webserver

./: Cargo.toml  wild-doc-webserver.toml
document/localhost/: -img.xml  index.sml  post.xml  request.xml  route.xml
document/localhost/doc/: postest.html
document/localhost/doc/-db/: index.html
document/localhost/doc/-db/bbs/: index.html
document/localhost/doc/-db/settings/: index.html
document/localhost/doc/-db/settings/admin/: index.html
document/localhost/doc/-db/settings/admin/edit/: index.html
document/localhost/doc/bbs-demo/: index.html
document/localhost/doc/postest/: index.html
document/localhost/include/: html.xml
document/localhost/include/-db/: _post.xml  dispatch.xml
document/localhost/include/-db/_cont/: index.html
document/localhost/include/-db/_cont/settings/: index.html
document/localhost/include/-db/_cont/settings/admin/: index.html
document/localhost/include/-db/_layout/: body.html  html.html  loggedin.html  login_form.html  make_account.html
document/localhost/include/-db/layout/: html.html  make_account.html
document/localhost/include/-db/post/: admin.xml
document/localhost/include/-db/post/bbs/: delete.xml
document/localhost/include/bbs-demo/_content/: index.html
document/localhost/include/bbs-demo/_layout/: html.html
document/localhost/include/cont/-db/: index.html
document/localhost/include/cont/-db/bbs/: index.html
document/localhost/include/cont/bbs-demo/: index.html
document/localhost/include/content/bbs-demo/: index.html
document/localhost/include/material/: text_field.html
document/localhost/post/: create_account_1st.xml
document/localhost/post/-db/: admin.xml  create_account_1st.xml  create_admin.xml  login.xml  logout.xml
document/localhost/post/-db/bbs/: delete.xml
document/localhost/post/bbs/: post.xml
document/localhost/public/-db/: index.html
document/localhost/public/bbs-demo/: index.html
document/localhost/static/-db/assets/css/: common.css  login.css  make_account.css
document/localhost/static/-db/assets/js/: attach_mdc.js
src/: main.rs  request.rs  response.rs  tls.rs
(+3 files in other folders)
