[package]
name = "wild-doc-webserver"
version = "0.0.14"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "This is still in development."

repository = "https://github.com/OdenShirataki/wild-doc-webserver"

keywords = ["database","javascript","v8","xml","html"]
categories = ["database-implementations","web-programming","template-engine"]

license = "MIT/Apache-2.0"

[dependencies]
hyper = {version="0.14",features=["server"]}
tokio = { version = "1.22", features = ["rt-multi-thread", "macros"] }
rustls = "0.20"
rustls-pemfile="1.0"
hyper-rustls = "0.23"
futures-util = "0.3"
tokio-rustls = "0.23"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
once_cell = "1.16.0"
url="2"
futures = "0.3"
bytes = "1.2.1"
multer = "2"
wild-doc-client-lib={version="0",path="../wild-doc-client-lib"}